# BetriebssystemePraktikum_2

./: aufgabe.md
Java-Code/: PrintJob.java  PrintJobGenerator.java  Printer.java  Spooler.java  SpoolerMonitor.java  main.java
cPorject/: CMakeLists.txt  hawsh  hawsh.c
